Collapse marker fix

--- a/tools/asciidoctor-stylesheet-factory/sass/cuba.scss
+++ b/tools/asciidoctor-stylesheet-factory/sass/cuba.scss
@@ -527,6 +527,7 @@ h5 {
 .toc-marker.open {
     border-width: 5px 4px 0px 4px;
     margin-top: 7px;
+    margin-left: -2px;
     border-color: #0b6ec7 transparent transparent transparent;
 }
 
@@ -918,4 +919,12 @@ dl dt {
 
 .treeview li {
     padding: 3px 0pt 3px 10px;
+}
+
+.treeview div.lastExpandable-hitarea {
+    background-position: -80px -3px;
+}
+
+.treeview div.lastCollapsable-hitarea {
+    background-position: -64px -25px;
 }
